--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ uvicorn[standard]>=0.23.0
 python-multipart>=0.0.6  # For file uploads
 
 # Image Processing
-opencv-python>=4.8.0
+opencv-python-headless>=4.8.0
 numpy>=1.24.0
 Pillow>=10.0.0
 
